--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "朱定坤",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.6.2"
+    "koa": "^2.6.2",
+    "koa-better-body": "^3.0.4",
+    "koa-convert": "^1.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static-cache": "^5.1.2",
+    "mysql-pro": "^1.0.1"
   }
 }
