--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-simple": "^0.5.5",
     "koa": "^2.6.2",
     "koa-better-body": "^3.0.4",
+    "koa-compress": "^3.0.0",
     "koa-convert": "^1.2.0",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
@@ -25,6 +26,7 @@
     "koa-static-cache": "^5.1.2",
     "moment": "^2.23.0",
     "mysql-pro": "^1.0.1",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
